--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,15 +1,23 @@
-.navbar {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: row;
-  border: 2px solid #9c6644;
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
-.navbar > * {
-  margin: 1rem;
-  color: #9c6644;
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 16px 18px;
   text-decoration: none;
-  transition: 200ms ease-in-out;
+  font-size: 17px;
 }
-.navbar > *:hover {
-  color: #e76f51;
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
 }
